--- a/dashboard-table/src/assets/common/PmtDashboard.scss
+++ b/dashboard-table/src/assets/common/PmtDashboard.scss
@@ -200,7 +200,6 @@ $font_rg:SabicRegular;
             padding:15px 0;
         }
         .pmt-health-index {
-            padding-left: 50px;
             position: relative;
             background: transparent url(../images/img_Potential_Failure.svg) no-repeat top right;
             background-size: 150px;
@@ -218,6 +217,8 @@ $font_rg:SabicRegular;
                 display: flex;
                 margin-top: -55px;
                 background: #fff;
+                width: 94%;
+                float: right;
 
                 div {
                     display: flex;
@@ -290,6 +291,8 @@ $font_rg:SabicRegular;
                                     display: flex;
                                     justify-content: flex-end;
                                     padding-right: 20px;
+                                    i{padding:0 5px;
+                                        }
                                 }
                             }
 
